init/secg.tf
resource "aws_security_group" "lb" {
  name   = "${var.ns}-lb"
  vpc_id = "${aws_vpc._.id}"

  ingress = {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress = {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
